instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/Patient_Agreement_Configuration_Version__c.object-meta.xml
<CustomObject>
    <label>Patient Agreement Configuration Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Agreement Configuration Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Agreement Configuration Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>