instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>