instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/fields/Past_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Past_Effective_Date__c</fullName>
    <formula>TODAY() &gt;= Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Effective Date</label>
    <type>Checkbox</type>
</CustomField>