instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/fields/Past_Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Past_Retirement_Date__c</fullName>
    <formula>TODAY() &gt;=  Retirement_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Retirement Date</label>
    <type>Checkbox</type>
</CustomField>