instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/fields/Replacement_Version__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New PACV that replaced this one</description>
    <label>Replacement Version</label>
    <referenceTo>Patient_Agreement_Configuration_Version__c</referenceTo>
    <relationshipLabel>Patient Agreement Configuration Versions</relationshipLabel>
    <relationshipName>Patient_Agreement_Configuration_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>