instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/fields/Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retirement Date</label>
    <type>Date</type>
</CustomField>