instance1/temp-retrieve/objects/Patient_Agreement_Configuration_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>